umol-models-graph/tests/mol_parsing/snapshots/compliance__mol_parsing__store_summary_snapshot@parse_mol_scifinder_Substance_20250901_1114.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 22
bond_count: 24
sum_formula: C15CoO6
graph6: U????CA?_C?O?__OGC@?_CA?GC?GC??AC??c??E?
